Signup validations added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -80,5 +80,5 @@
   <script src="js/index.js"></script>
   <script src="js/login.js"></script>
   <script src="js/members.js"></script>
-  <script src="js/signup.js"></script>
+  <!-- <script src="js/signup.js"></script> -->
 </html>
