some style details changsd

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,7 +48,7 @@
   
   </head>
 
-  <body >
+  <body style="font-family: 'Blinker', sans-serif;" class="bg-dark">
     <div id="root" class="bg-dark">
     </div>
   </body>
