Ground 7 for Heroku deploy

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap FontAwesome GoogleFonts-->
+
+    <link href="https://fonts.googleapis.com/css?family=Blinker&display=swap" rel="stylesheet">
+
     <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
