--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,25 +31,6 @@
     
     <title>Team Organizer</title>
 
-    <!-- Manuel ===================================================== -->
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
-    <!--
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    -->
-
-  
   </head>
 
   <body style="font-family: 'Blinker', sans-serif;" class="bg-dark">
@@ -80,9 +61,9 @@
   -->
 
   <!-- Optional JavaScript -->
-  <script src="js/app.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/login.js"></script>
-  <script src="js/members.js"></script>
+  <!-- <script src="js/app.js"></script> -->
+  <!-- <script src="js/index.js"></script> -->
+  <!-- <script src="js/login.js"></script> -->
+  <!-- <script src="js/members.js"></script> -->
   <!-- <script src="js/signup.js"></script> -->
 </html>
